--- a/E-Commerce.InfraStructure/E-Commerce.InfraStructure.csproj
+++ b/E-Commerce.InfraStructure/E-Commerce.InfraStructure.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +19,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="9.0.8" />
   </ItemGroup>
 
   <ItemGroup>
