Add Customer Basket Service And Endpoints

--- a/E-Commerce.Api/appsettings.json
+++ b/E-Commerce.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Ecommerce": "Server=DESKTOP-L1496LJ\\SQLEXPRESS02;Database=Ecommerce;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True ;"
+    "Ecommerce": "Server=DESKTOP-L1496LJ\\SQLEXPRESS02;Database=Ecommerce;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True ;",
+    "redis" : "localhost"
   }
 }
