End Section Identity

--- a/E-Commerce.Api/appsettings.json
+++ b/E-Commerce.Api/appsettings.json
@@ -8,6 +8,22 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Ecommerce": "Server=DESKTOP-L1496LJ\\SQLEXPRESS02;Database=Ecommerce;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True ;",
-    "redis" : "localhost"
+    "redis": "localhost"
+  },
+
+  "EmailSetting": {
+    "Smtp": "smtp.gmail.com",
+    "Port": 465,
+    "From": "mabroukmahmoud411@gmail.com",
+    "Username": "mabroukmahmoud411@gmail.com",
+    "Password": "qtzaprskclhxhmlc"
+  },
+  "Token": {
+    "Secret": "YOUR_SECRET_KEY_HERE@aliijdaiofjai000KSDKOPS",
+    "Issuer": "https://localhost:7210/"
+
   }
+
 }
+
+
